--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,173 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --radius: 0.5rem; /* 8px */
+    --background: 0 0% 100%; /* hsl(0, 0%, 100%) */
+    --foreground: 222.2 84% 4.9%; /* hsl(222.2, 84%, 4.9%) */
+    --card: 0 0% 100%; /* hsl(0, 0%, 100%) */
+    --card-foreground: 222.2 84% 4.9%; /* hsl(222.2, 84%, 4.9%) */
+    --popover: 0 0% 100%; /* hsl(0, 0%, 100%) */
+    --popover-foreground: 222.2 84% 4.9%; /* hsl(222.2, 84%, 4.9%) */
+    --primary: 222.2 47.4% 11.2%; /* hsl(222.2, 47.4%, 11.2%) */
+    --primary-foreground: 210 40% 98%; /* hsl(210, 40%, 98%) */
+    --secondary: 210 40% 96.1%; /* hsl(210, 40%, 96.1%) */
+    --secondary-foreground: 222.2 47.4% 11.2%; /* hsl(222.2 47.4% 11.2%) */
+    --muted: 210 40% 96.1%; /* hsl(210, 40%, 96.1%) */
+    --muted-foreground: 215.4 16.3% 46.9%; /* hsl(215.4, 16.3%, 46.9%) */
+    --accent: 210 40% 96.1%; /* hsl(210, 40%, 96.1%) */
+    --accent-foreground: 222.2 47.4% 11.2%; /* hsl(222.2, 47.4%, 11.2%) */
+    --destructive: 0 84.2% 60.2%; /* hsl(0, 84.2%, 60.2%) */
+    --destructive-foreground: 210 40% 98%; /* hsl(0, 84.2%, 60.2%) */
+    --border: 214.3 31.8% 91.4%; /* hsl(214, 31.8%, 91.4%) */
+    --input: 214.3 31.8% 91.4%; /* hsl(214, 31.8%, 91.4%) */
+    --ring: 222.2 84% 4.9%; /* hsl(210 40% 96.1%) */
+    --chart-1: 12 76% 61%; /* hsl(12, 76%, 61%) */
+    --chart-2: 173 58% 39%; /* hsl(173, 58%, 39%) */
+    --chart-3: 197 37% 24%; /* hsl(197, 37%, 24%) */
+    --chart-4: 43 74% 66%; /* hsl(43, 74%, 66%) */
+    --chart-5: 27 87% 67%; /* hsl(27, 87%, 67%) */
+  }
+
+  .dark {
+    --background: 0 0% 13%; /* hsl(0 0% 13%) */
+    --foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --primary: 26 100% 50%; /* hsl(26 100% 50%) */
+    --primary-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --ring: 26 100% 50%; /* hsl(26 100% 50%) */
+    --destructive: 0 73% 41%; /* hsl(0 73% 41%) */
+    --destructive-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --card: 0 0% 26%; /* hsl(0 0% 26%) */
+    --card-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --card-background: 200, 19%, 18%, 1;
+    --card-category: 218, 100%, 58%; /*hsl(218, 100%, 58%) */
+    --card-success: 151, 100%, 45%; /*	hsl(151,100%,45%) */
+    --secondary: 210 5% 8%; /* hsl(210 5% 8%) */
+    --secondary-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --chart-1: 220 70% 50%; /* hsl(220 70% 50%) */
+    --chart-2: 160 60% 45%; /* hsl(160 60% 45%) */
+    --chart-3: 30 80% 55%; /* hsl(30 80% 55%) */
+    --chart-4: 280 65% 60%; /* hsl(280 65% 60%) */
+    --chart-5: 340 75% 55%; /* hsl(340 75% 55%) */
+    --border: 0 0% 100%; /* hsl(0 0% 100%) */
+    --input: 0 0% 100%; /* hsl(0 0% 100%) */
+    --disabled: 0 0% 26%; /* hsl(0 0% 26%) */
+    --disabled-foreground: 0 0% 38%; /* hsl(0 0% 38%) */
+    --popover: 222.2 84% 4.9%; /* hsl(222.2 84% 4.9%) */
+    --popover-foreground: 210 40% 98%; /* hsl(210 40% 98%) */
+    --muted: 217.2 32.6% 17.5%; /* hsl(217.2 32.6% 17.5%) */
+    --muted-foreground: 215 20.2% 65.1%; /* hsl(215 20.2% 65.1%) */
+    --accent: 217.2 32.6% 17.5%; /* hsl(217.2 32.6% 17.5%) */
+    --accent-foreground: 210 40% 98%; /* hsl(210 40% 98%) */
+
+    --brand-bluegray: 200 19% 18%; /* hsl(200 19% 18%) */
+    --brand-bluegray-foreground: 199 18% 33%; /* hsl(199 18% 33%) */
+    --brand-bluegray-dark: 200 18% 26%; /* hsl(200 18% 26%) */
+    --brand-light: 0 0% 93%; /* hsl(0, 0%, 93%) */
+    --brand-light-foreground: 0 0% 74%; /* hsl(0, 0%, 74%) */
+    --brand-gray: 0 0% 88%; /* hsl(0, 0%, 88%) */
+    --brand-gray-medium: 0 0% 62%; /* hsl(0, 0%, 62%) */
+    --brand-gray-foreground: 0 0% 38%; /* hsl(0, 0%, 38%) */
+    --brand-blue: 231 99% 59%; /* hsl(231 99% 59%) */
+    --brand-blue-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-blue-950: 221 57% 13% /* hsl(221 57% 13% / 1) */;
+    --brand-red-dark: 0 73% 41%; /* hsl(0 73% 41%) */
+    --brand-red-dark-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-red-100: 0 100% 86% /* hsl(0 100% 86%) */;
+    --brand-red: 4 90% 58%; /* hsl(4 90% 58%) */
+    --brand-red-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-red-gradient: 0 95% 63%; /* hsl(0 95% 63%) */
+    --brand-green-dark: 123 46% 34%; /* hsl(123 46% 34%) */
+    --brand-green-dark-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-green: 130 45% 50%; /* hsl(130 45% 50%) */
+    --brand-green-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-green-500: 119 100% 60%; /* hsl(119 100% 60%) */
+    --brand-green-800: 119 67% 26%; /* hsl(119, 67%, 26%) */
+    --brand-emerald: 151 82% 68%; /* hsl(151 82% 68%)*/
+    --brand-emerald-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-lime-dark: 92 48% 42%; /* hsla(92, 48%, 42%)*/
+    --brand-lime-dark-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-lime: 88 50% 53%; /* hsl(88 50% 53%)*/
+    --brand-lime-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-orange: 26 100% 50%; /* hsl(26 100% 50%) */
+    --brand-orange-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-orange-dark: 26 100% 50%; /* hsl(27 100% 47%) */
+    --brand-orange-dark-foreground: 200 19% 18%; /* hsl(200, 19%, 18%) */
+    --brand-orange-gradient: 25 100% 51%; /* hsl(25 100% 51%) */
+    --brand-orange-100: 36 100% 85%; /* hsl(36, 100%, 85%) */
+    --brand-orange-900: 28 75% 30%; /* hsl(28, 75%, 30%) */
+    --brand-yellow: 37 95% 56%; /* hsl(37 95% 56%) */
+    --brand-yellow-100: 36 100% 75%; /* hsl(36 100% 75%) */
+    --brand-yellow-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-yellow-dark: 36 100% 50%; /* hsl(36, 100%, 50%) */
+    --brand-yellow-dark-foreground: 200 19% 18%; /* hsla(200, 19%, 18%) */
+    --brand-amber-300: 47 100% 50%; /* hsl(47, 100%, 50%) */
+    --brand-amber-100: 43 100% 84%; /* hsl(43, 100%, 84%)*/
+    --brand-purple: 260 54% 45%; /* hsl(260 54% 45%) */
+    --brand-purple-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-iris: 266 100% 54%; /* hsl(266 100% 54%) */
+    --brand-iris-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-pink: 299 100% 50%; /* hsl(299 100% 50%) */
+    --brand-pink-foreground: 0 0% 100%; /* hsl(0 0% 100%) */
+    --brand-primary-gradient: 202 12% 29%; /* hsl(202 12% 29%) */
+    --brand-secondary-gradient: 204 8% 10%; /* hsl(204 8% 10%) */
+  }
+
+  .gradient {
+    --default: linear-gradient(
+      216deg,
+      var(--brand-primary-gradient) 0%,
+      var(--brand-secondary-gradient) 55%
+    );
+    --primary: linear-gradient(
+      216deg,
+      var(--brand-orange-gradient) 0%,
+      var(--brand-red-gradient) 55%
+    );
+    --tecnologie: linear-gradient(
+      216deg,
+      var(--brand-blue) 0%,
+      var(--background) 55%
+    );
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  /* Track */
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f100;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: hsl(27 100% 47%);
+    border-radius: 5px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: hsl(0, 0%, 55%);
+  }
+
+  .custom-word-warp {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
   body {
-    @apply font-primary bg-primary text-white leading-loose;
-  }
-
-  .h1 {
-    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
-  }
-
-  .h2 {
-    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
-  }
-
-  .h3 {
-    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+    @apply bg-background text-foreground;
   }
 }
